Remove outdated documentation and scripts related to network setup and VNC configuration; update README with enhanced features and usage instructions for the file transfer chat application; streamline setup processes and clarify requirements for running the application on macOS and Ubuntu.